[package]
name = "rlox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.22"
enum-as-inner = "0.3.3"
itertools = "0.10.3"
libc = "0.2.109"
scopeguard = "1.1.0"
structopt = "0.3.25"
